fix no-issue-display overlapping shortcuts bar

--- a/src/components/blocks/NoIssuesDisplay.scss
+++ b/src/components/blocks/NoIssuesDisplay.scss
@@ -5,3 +5,9 @@
   text-align: center;
   width: 100%;
 }
+
+@media only screen and (max-width: 1000px) {
+  #no-issues {
+    top: 50%;
+  }
+}
